# silly_PDF2WAV

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  =0.1.1  =0.8.3  =2.5.0  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CONFIGURATION.md  CONTRIBUTING.md  DOCUMENTATION_UPDATES.md  GEMINI_TIMING_FIX.md  LICENSE  MEMORY.md  README.md  READ_ALONG_GEMINI_DISABLE.md  REFACTOR_SUMMARY.md  TESTING.md  TEST_SETUP_COMPLETE.md  app.py  app_factory.py  app_original.py  architecture_overview.puml  architecture_transformation.puml  audio_generation.py  classdiagram.plantuml  codesmells.md  component_interactions.puml  config.example.yaml  coverage.json  coverage_targets.md  llm_cleaned_debug.txt  llm_utils.py  main.py  mmDiagram.md  ocr_extracted_debug.txt  ocr_utils.py  pdf_debug_extract.py  (+24 more)
application/: composition_root.py
application/config/: __init__.py  config_builders.py  system_config.py  tts_factory.py
application/services/: pdf_processing.py
config/: academic_terms_en.json  rate_limits.json  voice_personas.json
domain/: class_diagram.plantuml  errors.py  interfaces.py  models.py
domain/audio/: __init__.py  audio_engine.py  timing_engine.py
domain/config/: __init__.py  tts_config.py
domain/container/: __init__.py  service_container.py
domain/document/: __init__.py  document_engine.py
domain/factories/: __init__.py  audio_factory.py  service_factory.py  text_factory.py  tts_factory.py
domain/services/: academic_ssml_service.py  async_audio_generation_service.py  audio_file_processor.py  audio_generation_coordinator.py  audio_generation_service.py  audio_processor.py  engine_capability_detector.py  enhanced_timing_strategy.py  gemini_timestamp_strategy.py  rate_limiting_service.py  sentence_measurement_strategy.py  ssml_generation_service.py  ssml_pipeline.py  text_cleaning_service.py  timing_calculator.py
domain/text/: __init__.py  chunking_strategy.py  text_pipeline.py
infrastructure/file/: __init__.py  cleanup_scheduler.py  file_manager.py
infrastructure/llm/: gemini_llm_provider.py
infrastructure/ocr/: ocr_extractor_adapter.py  page_range_validator_adapter.py  tesseract_ocr_provider.py
infrastructure/tts/: architecture_example.py  audio_generator_adapter.py  bark_tts_provider.py  coqui_tts_provider.py  gemini_tts_provider.py  gtts_provider.py  piper_tts_provider.py  text_cleaner_adapter.py  text_segmenter.py
static/: enhanced_read_along.js  style.css
templates/: base.html  index.html  read_along.html  result.html
test_backups/: test_audio_generation.py  test_audio_generation_service.py  test_config.py  test_pdf_processing.py  test_processors.py  test_text_cleaning_service.py
tests/: conftest.py  test_audio_generation.py  test_config.py  test_core_services.py  test_error_handling.py  test_helpers.py  test_integration_fresh.py  test_integration_simple.py  test_minimal_working  test_phase1_integration.py  test_phase1_services.py  test_processors.py  test_read_along_models.py  test_ssml_complete.py  test_text_processing.py  tests_integration.py
tests/application/services/: test_pdf_processing.py
tests/benchmarks/: __init__.py  test_core_performance.py  test_immutable_performance.py  test_mutable_vs_immutable.py
tests/domain/: test_models.py
tests/domain/services/: test_audio_generation_service.py  test_audio_generation_simple.py  test_text_cleaning_service.py  test_text_cleaning_simple.py
tests/infrastructure/llm/: test_gemini_llm_provider.py
tests/infrastructure/ocr/: test_tesseract_ocr_provider.py
tests/infrastructure/tts/: test_bark_tts_provider.py  test_coqui_tts_provider.py  test_gemini_tts_provider.py  test_gtts_provider.py
tests/integration/: test_integration_simple.py
tests/unit/: test_academic_ssml_service_simple.py  test_domain_models.py  test_domain_models_tdd.py  test_error_handling_tdd.py  test_new_architecture.py  test_system_config_tdd.py  test_system_config_yaml.py  test_text_cleaning_service.py  test_text_pipeline_tdd.py
